--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,10 @@
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
   <link rel="icon" href="/favicon.ico" />
   <title>React.js Boilerplate</title>
 </head>
